# LengthPrefixedProtobufParser

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
src/protobuf/: CMakeLists.txt
src/protobuf_parser/: DelimitedMessagesStreamParser.hpp  helpers.hpp
test/: CMakeLists.txt  Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp
